@@ -1,3 +1,9 @@
+2008-10-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Thread.cpp: fix for bug
+	2168847 ("Thread::onStop() problem").  Thanks to Alexandre
+	Bernardino for reporting this.
+
 2008-10-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* example/rand/rand.cpp: correct out-of-date example (Rand was
